// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issueAuthorizedTokenHandler when exist discordId when exist refreshToken should be valid 1`] = `
Array [
  "SELECT * FROM users WHERE current_login_id = ?;",
  "SELECT * FROM refresh_tokens WHERE discord_id = ? AND activated = 1;",
]
`;

exports[`issueAuthorizedTokenHandler when exist discordId when exist refreshToken should be valid 2`] = `Object {}`;

exports[`issueAuthorizedTokenHandler when exist discordId when not exist refreshToken should be valid 1`] = `
Array [
  "SELECT * FROM users WHERE current_login_id = ?;",
  "SELECT * FROM refresh_tokens WHERE discord_id = ? AND activated = 1;",
  "INSERT INTO refresh_tokens (discord_id, token, activated, created_at) VALUES (?, ?, 1, strftime('%s', 'now'));",
]
`;

exports[`issueAuthorizedTokenHandler when exist discordId when not exist refreshToken should be valid 2`] = `
Object {
  "accessToken": "signed strings",
  "refreshToken": "foobar",
}
`;

exports[`when db error should be error 1`] = `Array []`;

exports[`when db error should be error 2`] = `
Object {
  "error": [Error: DB],
}
`;

exports[`when invalid params should be error 1`] = `Array []`;

exports[`when invalid params should be error 2`] = `Object {}`;
